# eve_item_configurator_server_rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
src/: accessor.rs  accessor_impl.rs  env.rs  error.rs  main.rs
src/character_validator/: error.rs  jwks.rs  mod.rs  oauth.rs  util.rs  validate.rs
src/firestore_accessor/: accessor.rs  characters.rs  client.rs  error.rs  mod.rs
src/gcstorage_accessor/: accessor.rs  client.rs  error.rs  mod.rs
src/server/: error.rs  mod.rs  serve.rs
src/server/accessors/: accessor.rs  accessors.rs  error.rs
src/server/pb/: buyback_proto.rs  buyback_proto.tonic.rs  item_configurator_proto.rs  item_configurator_proto.tonic.rs  mod.rs  weve_esi_proto.rs
src/server/service/: buyback_contracts.rs  characters.rs  error.rs  grpc.rs  list_items.rs  list_items_procedure.rs  mod.rs  service.rs  update_items.rs
src/server/validator/: validator.rs
src/sqlite_accessor/: accessor.rs  client.rs  error.rs  mod.rs  queries.rs
