[package]
name = "wetc_item_configurator_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28", features = ["rt-multi-thread"] }
tonic = { version = "0.9" }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "8.3.0" }
serde_json = { version = "1.0" }
tonic-web = { version = "0.9" }
prost = { version = "0.11" }
google-cloud-storage = { version = "0.11.1" }
google-cloud-default = { version = "0.3.0", features = ["storage"] }
google-cloud-auth = { version = "0.10.0" }
serde_yaml = { version = "0.9" }
futures = { version = "0.3" }
gcloud-sdk = { version = "0.20" }
firestore = { version = "0.32" }
